# flask-matomo

./: .bumpversion.toml  .gitignore  BUILD  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml  setup.py
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  coverage.yml  release.yml  scheduled.yml  test.yml
docs/: Makefile
docs/source/: conf.py  configuration.rst  getting_started.rst  index.rst
docs/source/_templates/: links.html  sidebar_header.html
examples/simple-app/: pyproject.toml
examples/simple-app/src/simple_app/: __init__.py
flask_matomo/: __init__.py  core.py
flask_matomo2/: __init__.py  core.py
src/flask_matomo2/: __init__.py  core.py  trackers.py
tests/: requirements.txt  test_flask_matomo.py
tests/__snapshots__/test_flask_matomo/: test_lang_gets_tracked_if_accept_language_is_set.json  test_matomo_client_gets_called_on_get_bar.json  test_matomo_client_gets_called_on_get_custom_var.json  test_matomo_client_gets_called_on_get_foo.json  test_matomo_client_sets_urlref_if_referer_exists.json  test_matomo_details_updates_action_name.json  test_middleware_works_without_token.json  test_x_forwarded_for_changes_ip.json
