[tool.poetry]
name = "flask-matomo2"
version = "0.2.0"
description = "Track requests to your Flask server with Matomo"
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flask_matomo"}]
classifiers=[
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pytest-cov = "^4.0.0"
mypy = "^1.3.0"
bump2version = "^1.0.1"

[tool.poetry.group.ci.dependencies]
ruff = "0.0.267"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 97
target_version = ["py38"]

[tool.pyright]
reportGenralTypeIssues = "none"
