[project]
authors = [
    { name = "Lucas Hild", email = "contact@lucas-hild.de" },
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
maintainers = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["flask>=2.3", "werkzeug>=2.3.2", "httpx>=0.24"]
name = "flask-matomo2"
version = "0.4.1"
description = "Track requests to your Flask server with Matomo"
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Bug Tracker" = "https://github.com/spraakbanken/flask-matomo2/issues"
homepage = "https://spraakbanken.gu.se"
repository = "https://github.com/spraakbanken/flask-matomo2"
documentation = "http://flask-matomo2.readthedocs.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
reportGeneralTypeIssues = "none"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "bump2version>=1.0.1",
    "ruff>=0.2.2",
]

[tool.pdm.build]
includes = ["src/flask_matomo2"]
